--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,4 +1,4 @@
-# This workflow will build and push a new container image to Amazon ECR,
+-# This workflow will build and push a new container image to Amazon ECR,
 # and then will deploy a new task definition to Amazon ECS, when there is a push to the "main" branch.
 #
 # To use this workflow, you will need to complete the following set-up steps:
@@ -66,7 +66,7 @@ jobs:
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: task-definition.json 
+          task-definition: nodejs-app-task-definition.json 
           container-name: nodejs-container
           image: ${{ steps.build-image.outputs.image }}    
       - name: Deploy Amazon ECS task definition
