--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          task-definition: ${{ steps.task-def.outputs.task-definition }}
+          task-definition: nodejs-app-task-definition.json
           service: nodejs-service
           cluster: nodeapp1
           wait-for-service-stability: true
