--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -66,13 +66,13 @@ jobs:
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: task-definition.json 
+          task-definition: nodejs-app-task-definition.json 
           container-name: nodejs-container
           image: ${{ steps.build-image.outputs.image }}    
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          task-definition: task-definition.json
+          task-definition: nodejs-app-task-definition.json
           service: nodejs-service
           cluster: nodeapp1
           wait-for-service-stability: true
