--- a/.github/workflows/awsecs.yml
+++ b/.github/workflows/awsecs.yml
@@ -32,10 +32,10 @@ on:
 
 env:
   AWS_REGION: ap-south-1                  # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: 1nodejs-app           # set this to your Amazon ECR repository name
+  ECR_REPOSITORY: 2nodejs-app           # set this to your Amazon ECR repository name
   ECS_SERVICE: nodejs-service                 # set this to your Amazon ECS service name
   ECS_CLUSTER: nodeapp2                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: nodejs-app-task-definition # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: app-task-definition # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: nodejs-container           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
@@ -63,13 +63,15 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
+       with:
+          mask-password: 'true'
 
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: latest
-        REPOSITORY: 1nodejs-app
+        REPOSITORY: 2nodejs-app
       run: |
         # Build a docker container and
         # push it to ECR so that it can
@@ -89,7 +91,7 @@ jobs:
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
-        task-definition: nodejs-app-task-definition.json
+        task-definition: app-task-definition.json
         service: nodejs-service
         cluster: nodeapp2
         wait-for-service-stability: true
