--- a/.github/workflows/awsecs.yml
+++ b/.github/workflows/awsecs.yml
@@ -81,7 +81,7 @@ jobs:
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
-        task-definition: nodejs-app-task-definition.json
+        task-definition: app-task-definition.json
         container-name: nodejs-container
         image: ${{ steps.build-image.outputs.image }}
 
