--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: 'us-east-1'
+          aws-region: 'ap-south-1'
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
@@ -53,7 +53,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: latest
-          REPOSITORY: 1nodejs-app
+          REPOSITORY: 2nodejs-app
         run: |
           # Build a docker container and
           # push it to ECR so that it can
@@ -66,13 +66,13 @@ jobs:
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: nodejs-app-task-definition.json 
+          task-definition: app-task-definition.json 
           container-name: nodejs-container
           image: ${{ steps.build-image.outputs.image }}    
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          task-definition: nodejs-app-task-definition.json
+          task-definition: app-task-definition.json
           service: nodejs-service
-          cluster: nodeapp1
+          cluster: nodeapp2
           wait-for-service-stability: true
